Made password box stick to the top. Fixed password scrolling to not overflow. Added some spacing between input button and levels. Added padding to container to account for border width.

--- a/src/app/components/password-level/password-game/password-game.component.scss
+++ b/src/app/components/password-level/password-game/password-game.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   overflow-y: auto;
-  height: 90%;
+  height: inherit;
 }
 
 app-rule-box {
