--- a/src/app/components/password-level/password-input/password-input.component.scss
+++ b/src/app/components/password-level/password-input/password-input.component.scss
@@ -1,3 +1,7 @@
+form {
+  margin-bottom: 1em;
+}
+
 .password-field {
   width: 65%;
 }
@@ -58,7 +62,7 @@ button {
 
 ::ng-deep .burning-title {
   color: darkred;
-  font-size: 45;
+  font-size: 45px;
 }
 
 ::ng-deep .burning-confirm-button {
