--- a/src/app/screens/password-game-screen/password-game-screen.component.scss
+++ b/src/app/screens/password-game-screen/password-game-screen.component.scss
@@ -17,6 +17,11 @@ app-password-game {
 
 .container {
   flex-direction: column;
+  padding: 2em;
+}
+
+password-game {
+  overflow-y: hidden;
 }
 
 header {
